objects/Candidate__c.object
<CustomObject>
    <description>Represents an applicant who might apply for
one or more positions</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Employed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Currently Employed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HS Diploma</fullName>
                </value>
                <value>
                    <fullName>BA/BS</fullName>
                </value>
                <value>
                    <fullName>MA/MS/MBA</fullName>
                </value>
                <value>
                    <fullName>Ph.D.</fullName>
                </value>
                <value>
                    <fullName>Post Doc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <externalId>true</externalId>
        <label>FirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <externalId>true</externalId>
        <label>LastName</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SSN__c</fullName>
        <label>SSN</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Citizen__c</fullName>
        <defaultValue>true</defaultValue>
        <label>US Citizen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visa_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visa Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <label>Years of Experience</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FirstName__c</columns>
        <columns>LastName__c</columns>
        <columns>Mobile__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Candidate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>city_is_required</fullName>
        <active>true</active>
        <description>city_is_required</description>
        <errorConditionFormula>ISNULL( City__c )</errorConditionFormula>
        <errorDisplayField>City__c</errorDisplayField>
        <errorMessage>city_is_required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>mobile_no_is_required</fullName>
        <active>true</active>
        <description>mobile no is required</description>
        <errorConditionFormula>ISNULL( Mobile__c )</errorConditionFormula>
        <errorDisplayField>Mobile__c</errorDisplayField>
        <errorMessage>mobile no is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>name_is_required</fullName>
        <active>true</active>
        <description>please enter first name</description>
        <errorConditionFormula>ISNULL( FirstName__c )</errorConditionFormula>
        <errorDisplayField>FirstName__c</errorDisplayField>
        <errorMessage>please enter first name</errorMessage>
    </validationRules>
</CustomObject>